--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,9 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+
+# Agent/Project Internal Docs
+/directives/
+/execucoes/
+To-do.md
+*.tmp
