--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.0",
+    "@tanstack/react-query": "^5.90.20",
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.28.1",
